
* Updated documentation in check.h to reference new check API and avoid
  mentioning deprecated API.

* Remove usage of deprecated fail(), fail_if(), and fail_unless() calls from
  check's unit tests.

* Fix implementation of putenv in check's libcompat for systems that do not
  provide it.

* Fix implementation of unsettenv in check's libcompat for systems that do
  not provide it. 

Mon, Oct 22, 2012: Released Check 0.9.9
  based on r637 (2012-10-22 13:54:14 +0200)

* Measure test duration and print in XML output.
  Feature request #3521371 on SF, but reimplemented.

* Added contrib/XML_for_JUnit.xsl from feature request #3521371 on SF.

* Added support for setting log files via environment variables.
  Patch #3576713 on SF.

* Added better pkg-config and subunit support, patch #3417041 on SF.

* Make tests/test_vars.in bourne shell compatible, bug #3472578 on SF.

* Added ck_ prefix to mutex_lock variable, to avoid name clash on Solaris.
  Solves bug #3472574 on SF.

* In autoconf, request system extensions to generate 64-bit safe code,
  solution from patch #2803433 on SF.

* Fix for mutex deadlock when killing threads, patch #3564640 on SF.

* Make XML output well-formed, solution from patch #3575642 on SF.
  Solves bug #3485651 also.

* Fix buggy duration calculation, bug #3575451 on SF. 

* A more complete CMake / MSVC patch for those interested in pursuing
  Windows development with Check and Visual Studio.  See
  patches/mloskot.windows.patch.

* Added instructions for improving the speed and output of `make
  check' when using Automake.  See contrib/improved_make_check/.

* Added a chapter in the documentation for selective running of tests.

* Changed how the message pipe is read. Before, the whole file was copied to
  RAM with realloc, giving problems with huge allocations for repetetive
  tests, the problem was visible for a specific GStreamer test case.

* Improvements to the new Check API: documentation, macros that allow